--- a/examples/ldavis/index.html
+++ b/examples/ldavis/index.html
@@ -1,3 +1,9 @@
 <html><head><title>LDAvis</title></head><body>
 
-<link rel="styleshe
+<link rel="stylesheet" type="text/css" href="/LDAvis.css">
+
+
+<div id="ldavis_el181400486183401688389054262"></div>
+<script type="text/javascript">
+
+var ldavis_el181400486183401688389054262_data = {"mdsDat": {"Freq": [34.010305033630594, 25.924304903193875, 8.2682
